import Consumer from 'fusion:consumer';
import Context from 'fusion:context';
import React from 'react';
import { render, unmountComponentAtNode } from 'react-dom';
import SnippetNoticia from '../../../../../../components/private/LN/nota/snippet/noticia';
import newsNoteWithCompleteAttrs from '../../../../../../__mocks__/data/articles/newsNoteWithCompleteAttrs';
import newsNoteWithMissingAttrs from '../../../../../../__mocks__/data/articles/newsNoteWithMissingAttrs';

let container = null;
beforeEach(() => {
    container = document.createElement('div');
    document.body.appendChild(container);
});

afterEach(() => {
    unmountComponentAtNode(container);
    container.remove();
    container = null;
});

describe('snippet noticia', () => {
    it('renders nicely with complete data', () => {
        render(<SnippetNoticia {...newsNoteWithCompleteAttrs} />, container);
        expect(container).toMatchSnapshot();
    });

    // TODO: improve this test, smoke poures out of the screen
    it('renders alright with missing data', () => {
        render(<SnippetNoticia {...newsNoteWithMissingAttrs} />, container);
        expect(container).toMatchSnapshot();
    });
});
