// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet noticia renders alright with missing data 1`] = `
<div>
  <script
    type="application/ld+json"
  >
    {
  "@context": "https://schema.org",
  "@type": "NewsArticle",
  "headline": "Mi paso por el yoga del infierno",
  "url": "https://www.lanacion.com.ar/deportes/mi-paso-por-el-yoga-del-infierno-nid/?_website=la-nacion-ar",
  "dateCreated": "Invalid Date",
  "datePublished": "Thu, 24 Jan 2019 17:22:51 GMT",
  "dateModified": "Invalid Date",
  "mainEntityOfPage": "https://www.lanacion.com.ar/deportes",
  "articleSection": "Deportes",
  "isAccessibleForFree": "",
  "hasPart": {
    "@type": "",
    "isAccessibleForFree": "",
    "cssSelector": ".nota"
  },
  "isPartOf": {
    "@type": [
      "CreativeWork",
      "Product"
    ],
    "name": "",
    "productID": ""
  },
  "author": [],
  "creator": [],
  "publisher": {
    "@type": "Organization",
    "name": "LA NACION",
    "url": "https://www.lanacion.com.ar",
    "logo": {
      "@context": "https://schema.org",
      "@type": "ImageObject",
      "url": "https://static.lanacion.com.ar/v1/ln/imgs/layout/logos/logo-ln-amp.png",
      "height": 41,
      "width": 391
    }
  }
}
  </script>
</div>
`;

exports[`snippet noticia renders nicely with complete data 1`] = `
<div>
  <script
    type="application/ld+json"
  >
    {
  "@context": "https://schema.org",
  "@type": "NewsArticle",
  "headline": "Mi paso por el yoga del infierno",
  "url": "https://www.lanacion.com.ar/deportes/mi-paso-por-el-yoga-del-infierno-nid/?_website=la-nacion-ar",
  "dateCreated": "Thu, 24 Jan 2019 17:17:38 GMT",
  "datePublished": "Thu, 24 Jan 2019 17:22:51 GMT",
  "dateModified": "Thu, 24 Jan 2019 17:22:50 GMT",
  "mainEntityOfPage": "https://www.lanacion.com.ar/deportes",
  "articleSection": "Deportes",
  "isAccessibleForFree": "",
  "hasPart": {
    "@type": "",
    "isAccessibleForFree": "",
    "cssSelector": ".nota"
  },
  "isPartOf": {
    "@type": [
      "CreativeWork",
      "Product"
    ],
    "name": "",
    "productID": ""
  },
  "author": "Diego Cabot, Martín Lousteau",
  "creator": "Diego Cabot, Martín Lousteau",
  "keywords": [
    "Test",
    "Test2",
    "Another Keyword",
    "Carne con Papa"
  ],
  "publisher": {
    "@type": "Organization",
    "name": "LA NACION",
    "url": "https://www.lanacion.com.ar",
    "logo": {
      "@context": "https://schema.org",
      "@type": "ImageObject",
      "url": "https://static.lanacion.com.ar/v1/ln/imgs/layout/logos/logo-ln-amp.png",
      "height": 41,
      "width": 391
    }
  },
  "thumbnailUrl": "https://arc-anglerfish-arc2-sandbox-sandbox-lanacionar.s3.amazonaws.com/public/VASAYYYBLVFIJCFDSH22JS5X2Q.jpg",
  "image": {
    "@context": "https://schema.org",
    "@type": "ImageObject",
    "url": "https://arc-anglerfish-arc2-sandbox-sandbox-lanacionar.s3.amazonaws.com/public/VASAYYYBLVFIJCFDSH22JS5X2Q.jpg",
    "height": "950",
    "width": "1484"
  }
}
  </script>
</div>
`;
